turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:19: error: ')' expected but 'if' found.
  if (mov==1){
  ^